Improve AbstractTypeBuilder.toString()
Do not report empty collections, improving developer experience.

JIRA: YANGTOOLS-1792
Change-Id: I659e71d0ed8cc5720efb172d4066b516e29928e9
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>